# Langchain

./: README.md  app.py  pyproject.toml
data/vector_store/: chroma.sqlite3
evals/: __init__.py  run_eval.py
evals/datasets/: rag_eval.json
evals/metrics/: __init__.py  answer_quality.py  faithfulness.py  retrieval.py
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  search.py  vectorstore.py
